# zml

./: MODULE.bazel  build.zig.zon  echo
async/: build.zig  build.zig.zon
examples/: build.zig
examples/llama/: BUILD.bazel  llama.zig  main.zig
mlir/: BUILD.bazel  bazel.zig  build.zig  build.zig.zon
mlx/: BUILD.bazel  libmlx.BUILD.bazel  mlx.bzl
mlx/plugin/: BUILD.bazel
pjrt/: BUILD.bazel  pjrt.zig  xplane_to_trace_events.zig  xspace_to_json.cc  xspace_to_json.zig
pjrt/utils/: math_utils.zig  trace_utils.zig  xplane_schema.zig  xplane_utils.zig  xplane_visitor.zig
runtimes/cuda/: BUILD.bazel  cuda.bzl  cuda.zig  libpjrt_cuda.BUILD.bazel  zmlxcuda.c
stdx/: build.zig  build.zig.zon
tools/: bazel.zig
zml/: buffer.zig  context.zig  module.zig  ops.zig  platform.zig  testing.zig
