load("@rules_zig//zig:defs.bzl", "zig_library")

cc_library(
    name = "empty",
)

cc_library(
    name = "mlx",
    defines = ["ZML_RUNTIME_MLX"],
    deps = ["@libmlx"],
    visibility = ["//visibility:public"],
)

zig_library(
    name = "tpu",
    import_name = "runtimes/tpu",
    main = "tpu.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//pjrt",
    ] + select({
        "//runtimes:tpu.enabled": [
            ":libpjrt_tpu",
            "//async",
        ],
        "//conditions:default": [":empty"],
    }),
)

filegroup(
    name = "layers",
    srcs = [],
    visibility = ["//visibility:public"],
)
