load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@zml//bazel:cc_import.bzl", "cc_import")

copy_to_directory(
    name = "sandbox",
    srcs = [
        "@cuda_nvcc//:libdevice",
        "@cuda_nvcc//:ptxas",
    ],
    include_external_repositories = ["**"],
)


cc_library(
    name = "zmlxcuda_lib",
    data = ["@libpjrt_cuda//:runfiles"],
    srcs = ["@zml//runtimes/cuda:zmlxcuda_srcs"],
    linkopts = [
        "-lc",
        "-ldl",
    ],
    deps = ["@bazel_tools//tools/cpp/runfiles"],
)

cc_shared_library(
    name = "zmlxcuda_so",
    shared_lib_name = "libzmlxcuda.so.0",
    deps = [":zmlxcuda_lib"],
)

cc_import(
    name = "zmlxcuda",
    shared_library = ":zmlxcuda_so",
)


cc_import(
    name = "libpjrt_cuda",
    data = [":sandbox"],
    shared_library = "libpjrt_cuda.so",
    visibility = ["@zml//runtimes/cuda:__subpackages__"],
    add_needed = [
        "libzmlxcuda.so.0",
    ],
    rename_dynamic_symbols = {
        "dlopen": "zmlxcuda_dlopen",
    },
    deps = [
        ":zmlxcuda",
        "@cuda_cudart//:cudart",
        "@cuda_cupti//:cupti",
        "@cuda_nvcc//:nvvm",
        "@cuda_nvrtc//:nvrtc",
        "@cudnn//:cudnn",
        "@libcublas//:cublas",
        "@libcufft//:cufft",
        "@libcusolver//:cusolver",
        "@libcusparse//:cusparse",
        "@libnccl//:nccl",
        "@libnvjitlink//:nvjitlink",
        "@zlib",
    ],
)
